correct alignment issue

--- a/single-page-design-portfolio/app/styles/index.css
+++ b/single-page-design-portfolio/app/styles/index.css
@@ -6,7 +6,6 @@
     font-weight: 500 700;
     font-display: swap;
 }
-/*  COLORS */
 :root {
     --galactic-blue: hsl(252,66%,62%);
     --summer-yellow: hsl(28,89%,67%);
@@ -62,53 +61,19 @@ body {
     color: var(--medium-brown);
 }
 
-.container {
-    margin: 16px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-.landing {
-    display: flex;
-    flex-direction: column;
-}
-
-.landing h3 {
-    text-align: center;
-}
-.landing p {
-    margin-left: auto;
-    margin-right: auto;
-    width: 80%;
-    text-align: center;
-}
 .spacing {
     margin-top: var(--spacing);
 }
 
-.card-wrapper {
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(min(400px, 100%), 1fr));
-    justify-content: center;
-}
 
-.card {
-    position: relative;
-    height: 225px;
-    background: white;
-    border-radius: 8px;
-    padding: var(--spacing);
-    margin: var(--spacing);
-    display: flex;
-    align-items: end;
-    color: var(--light-cream);
-}
 .galactic-blue {
     background-color: var(--galactic-blue);
+    grid-column: 1 / -1;
 }
 
 .summer-yellow {
     background-color: var(--summer-yellow);
+
 }
 .pink {
     background-color: var(--pink);
@@ -131,7 +96,6 @@ body {
 
 .card svg {
     position: absolute;
-    top: 5%;
-    right: 10px;
-
+    top: 0;
+    right: 0;
 }
